version/0.21/_sources/api/solver/_autosummary/settings/axis_2.rst.txt
:orphan:

.. _axis_2:

axis
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.axis_2.axis
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`axis_child <axis_child_1>`


.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`boundaries <boundaries>`       'boundaries' child.

==============================   =======================

