version/0.27/_sources/api/solver/_autosummary/settings/axis_2.rst.txt
:orphan:

.. _axis_2:

axis
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.axis_2
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`axis_2_child <axis_2_child>`


.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`boundary_conditions <boundary_conditions>`       Enter the boundary conditions menu.

================================================   =======================================

